<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">meplusplus</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_comment_detail">CommentDetailActivity</string>
    <string name="place_comment">Place comment…</string>
    <string name="post">Post</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="change_image">Change Image</string>
    <string name="username">Username…</string>
    <string name="bio">Bio…</string>
    <string name="update_profile">Update Profile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="introduce_email">Introduce Email</string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="introduce_password">Introduce Password</string>
    <string name="show_password">Show Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_post">New Post</string>
    <string name="select_image">Select Image</string>
    <string name="add_description">Add Description…</string>
    <string name="upload_post">Upload Post</string>
    <string name="register">Register</string>
    <string name="introduce_name">Introduce Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_wait">Please wait…</string>
    <string name="me">Me++</string>
    <string name="add_bio">Add Bio …</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="search_people">Search People…</string>
    <string name="see_what_s_up">See what\'s up</string>
    <string name="place_a_comment">Place a comment…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="sign_out">Sign Out</string>
    <string name="place_a_comment2">Place a comment…</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="help">Help</string>
    <string name="help_give_feedback">Help / Give FeedbacK</string>
    <string name="tell_us_something">Tell us something ッ</string>
    <string name="subject">Subject …</string>
    <string name="your_message">Your message …</string>
    <string name="send_email">Send Email</string>
    <string name="view_profile">View Profile</string>

    <!--
    Drawer 
    -->
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="me2">Me++</string>
    <string name="fitness">Fitness</string>
    <string name="workout">Workout</string>
    <string name="welcome">Welcome,</string>
    <string name="title_activity_chatting">ChattingActivity</string>
    <string name="send">Send</string>
    <string name="title_activity_calories">CaloriesActivity</string>


    <string-array name="numbers">
        <item>Little to no exercise</item>
        <item tools:ignore="TypographyDashes">Light Exercise (1-2 days/week)</item>
        <item tools:ignore="TypographyDashes">Generally Active (3-5 days/week)</item>
        <item tools:ignore="TypographyDashes">Active (5-7 days/week)</item>
    </string-array>


    <string-array name="musicplayer">
        <item> Music </item>
        <item tools:ignore="TypographyDashes">Play Music</item>
        <item tools:ignore="TypographyDashes">Pause Music</item>
        <item tools:ignore="TypographyDashes">Stop Music</item>
    </string-array>


    <string name="title_activity_zen_mode">ZenModeActivity</string>
    <string name="title_activity_to_do">ToDoActivity</string>

    <string name="done">done</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="workout_splits">Workout Splits</string>
    <string name="title_activity_workout_started">WorkoutStarted</string>
    <string name="support_the_developer">Support the developer</string>
    <string name="completed">Completed:</string>
</resources>