<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_options_profile_dark_White_mode"
        android:icon="@drawable/ic_baseline_dark_mode_24"
        android:title="@string/dark_mode" />


    <item
        android:id="@+id/menu_options_Help"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/help_give_feedback" />

    <item
        android:id="@+id/menu_options_want_adds"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/support_the_developer" />

    <item
        android:id="@+id/menu_options_profile_signout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/sign_out" />


</menu>