<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_blurry_gradient_haikei__1_"
    tools:context=".Utils.EditProfile">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/editprofile_closeImg"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/sabandija"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/editprofile_rotate_image"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0.1"
            android:background="@drawable/ic_baseline_rotate_right_24"
            android:contentDescription="@string/todo2"
            tools:ignore="ContentDescription" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/editprofile_photo"
            android:layout_width="280dp"
            android:layout_height="300dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/ic_add_photo"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/editprofile_change_image"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/fui_transparent"
            android:backgroundTint="@color/fui_transparent"
            android:text="@string/change_image"
            android:textColor="@color/DeepPink"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editprofile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/editprofile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:hint="@string/bio"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/editprofile_button_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/DarkBlue"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />
    </LinearLayout>


</RelativeLayout>