<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Social_PageFragment"
    android:background="#051255">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/fragment_account_username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="username"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/fragment_account_options"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_menu_24"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/imgborder_maipatrat"
            android:padding="5dp"
            >

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


            <TextView
                android:id="@+id/fragment_account_number_of_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                 android:layout_marginTop="70dp"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/posts"
                    android:textColor="#c2c2c2"
                    android:textSize="18sp" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_account_image_profile"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:background="@drawable/ic_baseline_person_pin_24"
               android:layout_gravity="center_horizontal"
                android:layout_weight="0.7"
                />

            <Button
                android:id="@+id/fragment_account_edit_button"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0.3"
                android:backgroundTint="@color/purple_700"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="15dp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >


            <TextView
                android:id="@+id/fragment_account_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/imgborder_maipatrat"
                android:paddingStart="5dp"
                android:text="@string/add_bio"
                android:textColor="#c2c2c2"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#636363"
                android:layout_below="@+id/fragment_account_description"
                />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_account_recyclerView_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="10dp"
            />


    </LinearLayout>


</FrameLayout>